@startuml
title DAO Pattern for Score Leaderboard

interface ScoreDAO {
    + getAll(): List<ScoreRecord>
    + getOne(int rank): ScoreRecord
    + add(ScoreRecord record): void
    + delete(ScoreRecord record): void
    + getLeaderboard(): List<ScoreRecord>
}

class ScoreRecord {
    - playerName: String
    - score: int
    - recordTime: String
    - difficulty: int
    + ScoreRecord(String playerName, int score, int difficulty)
    + getPlayerName(): String
    + getScore(): int
    + getRecordTime(): String
    + getDifficulty(): int
    + compareTo(ScoreRecord other): int
}

class ScoreDAOImpl {
    - scoreList: List<ScoreRecord>
    - filePath: String
    - difficulty: int
    + ScoreDAOImpl(int difficulty)
    + getAll(): List<ScoreRecord>
    + getOne(int rank): ScoreRecord
    + add(ScoreRecord record): void
    + delete(ScoreRecord record): void
    + getLeaderboard(): List<ScoreRecord>
    - loadFromFile(): List<ScoreRecord>
    - saveToFile(): void
    + printLeaderboard(): void
}

class Game {
    - score: int
    - scoreDAO: ScoreDAOImpl
    - checkResultAction(): void
    - saveAndShowLeaderboard(): void
}

ScoreDAO <|.. ScoreDAOImpl
ScoreDAOImpl --> ScoreRecord
Game --> ScoreDAOImpl

@enduml
